build/transformers/v4.11.0/en/model_doc/gptj.mdx
<script>
import Tip from "../../Tip.svelte";
import Youtube from "../../Youtube.svelte";	
export let fw: "pt" | "tf"
</script>

<!--Copyright 2021 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

# GPT-J

## Overview

The GPT-J model was released in the [kingoflolz/mesh-transformer-jax](https://github.com/kingoflolz/mesh-transformer-jax) repository by Ben Wang and Aran Komatsuzaki. It is a GPT-2-like
causal language model trained on [the Pile](https://pile.eleuther.ai/) dataset.

This model was contributed by [Stella Biderman](https://huggingface.co/stellaathena).

Tips:

- Running [GPT-J](https://huggingface.co/EleutherAI/gpt-j-6B) in float32 precision on GPU requires at least 24 GB of
  RAM. On GPUs with less than 24 GB RAM, one should therefore load the model in half-precision:

```
>>> from transformers import GPTJForCausalLM
>>> import torch

>>> model =  GPTJForCausalLM.from_pretrained("EleutherAI/gpt-j-6B", torch_dtype=torch.float16)
```

### Generation

The [generate()](main_classes/model.html#transformers.generation_utils.GenerationMixin.generate) method can be used to generate text using GPT-J
model.

```
>>> from transformers import AutoModelForCausalLM, AutoTokenizer
>>> model = AutoModelForCausalLM.from_pretrained("EleutherAI/gpt-j-6B")
>>> tokenizer = AutoTokenizer.from_pretrained("EleutherAI/gpt-j-6B")

>>> prompt = "In a shocking finding, scientists discovered a herd of unicorns living in a remote, " \
...          "previously unexplored valley, in the Andes Mountains. Even more surprising to the " \
...          "researchers was the fact that the unicorns spoke perfect English."

>>> input_ids = tokenizer(prompt, return_tensors="pt").input_ids

>>> gen_tokens = model.generate(input_ids, do_sample=True, temperature=0.9, max_length=100,)
>>> gen_text = tokenizer.batch_decode(gen_tokens)[0]
```

...or in float16 precision:

```
>>> from transformers import GPTJForCausalLM, AutoTokenizer
>>> import torch

>>> model = GPTJForCausalLM.from_pretrained("EleutherAI/gpt-j-6B", torch_dtype=torch.float16)
>>> tokenizer = AutoTokenizer.from_pretrained("EleutherAI/gpt-j-6B")

>>> prompt = "In a shocking finding, scientists discovered a herd of unicorns living in a remote, " \
...          "previously unexplored valley, in the Andes Mountains. Even more surprising to the " \
...          "researchers was the fact that the unicorns spoke perfect English."

>>> input_ids = tokenizer(prompt, return_tensors="pt").input_ids

>>> gen_tokens = model.generate(input_ids, do_sample=True, temperature=0.9, max_length=100,)
>>> gen_text = tokenizer.batch_decode(gen_tokens)[0]
```

## GPTJConfig

<a id='transformers.GPTJConfig'></a>
> **class transformers.GPTJConfig**(vocab_size = 50400, n_positions = 2048, n_ctx = 2048, n_embd = 4096, n_layer = 28, n_head = 16, rotary_dim = 64, n_inner = None, activation_function = gelu_new, resid_pdrop = 0.0, embd_pdrop = 0.0, attn_pdrop = 0.0, layer_norm_epsilon = 1e-05, initializer_range = 0.02, scale_attn_weights = True, gradient_checkpointing = False, use_cache = True, bos_token_id = 50256, eos_token_id = 50256, **kwargs)


This is the configuration class to store the configuration of a [GPTJModel](model_doc/gptj.html#transformers.GPTJModel). It is used to
instantiate a GPT-J model according to the specified arguments, defining the model architecture. Instantiating a
configuration with the defaults will yield a similar configuration to that of the GPT-J [gpt-j-6B](https://huggingface.co/EleutherAI/gpt-j-6B) architecture. Configuration objects inherit from
[PretrainedConfig](main_classes/configuration.html#transformers.PretrainedConfig) and can be used to control the model outputs. Read the documentation from
[PretrainedConfig](main_classes/configuration.html#transformers.PretrainedConfig) for more information.

> Parameters

- **vocab_size** (`int`, _optional_, defaults to 50400) --
  Vocabulary size of the GPT-J model. Defines the number of different tokens that can be represented by the
  `inputs_ids` passed when calling [GPTJModel](model_doc/gptj.html#transformers.GPTJModel).
- **n_positions** (`int`, _optional_, defaults to 2048) --
  The maximum sequence length that this model might ever be used with. Typically set this to something large
  just in case (e.g., 512 or 1024 or 2048).
- **n_ctx** (`int`, _optional_, defaults to 2048) --
  Dimensionality of the causal mask (usually same as n_positions).
- **n_embd** (`int`, _optional_, defaults to 4096) --
  Dimensionality of the embeddings and hidden states.
- **n_layer** (`int`, _optional_, defaults to 28) --
  Number of hidden layers in the Transformer encoder.
- **n_head** (`int`, _optional_, defaults to 16) --
  Number of attention heads for each attention layer in the Transformer encoder.
- **rotary_dim** (`int`, _optional_, defaults to 64) --
  Number of dimensions in the embedding that Rotary Position Embedding is applied to.
- **n_inner** (`int`, _optional_, defaults to None) --
  Dimensionality of the inner feed-forward layers. `None` will set it to 4 times n_embd
- **activation_function** (`str`, _optional_, defaults to `"gelu_new"`) --
  Activation function, to be selected in the list `["relu", "silu", "gelu", "tanh", "gelu_new"]`.
- **resid_pdrop** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, encoder, and pooler.
- **embd_pdrop** (`int`, _optional_, defaults to 0.1) --
  The dropout ratio for the embeddings.
- **attn_pdrop** (`float`, _optional_, defaults to 0.1) --
  The dropout ratio for the attention.
- **layer_norm_epsilon** (`float`, _optional_, defaults to 1e-5) --
  The epsilon to use in the layer normalization layers.
- **initializer_range** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
- **scale_attn_weights** (`bool`, _optional_, defaults to `True`) --
  Scale attention weights by dividing by sqrt(hidden_size).
- **gradient_checkpointing** (`bool`, _optional_, defaults to `False`) --
  Whether or not to use gradient checkpointing to save memory at the expense of slower backward pass.
- **use_cache** (`bool`, _optional_, defaults to `True`) --
  Whether or not the model should return the last key/values attentions (not used by all models).

> Example:

```python
>>> from transformers import GPTJModel, GPTJConfig

>>> # Initializing a GPT-J 6B configuration
>>> configuration = GPTJConfig()

>>> # Initializing a model from the configuration
>>> model = GPTJModel(configuration)

>>> # Accessing the model configuration
>>> configuration = model.config
```


## GPTJModel

<a id='transformers.GPTJModel'></a>
> **class transformers.GPTJModel**(config)

The bare GPT-J Model transformer outputting raw hidden-states without any specific head on top.
This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.

> Parameters

- **config** ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.GPTJModel.forward'></a>
> **forward**(self, input_ids = None, past_key_values = None, attention_mask = None, token_type_ids = None, position_ids = None, head_mask = None, inputs_embeds = None, use_cache = None, output_attentions = None, output_hidden_states = None, return_dict = None)

The [GPTJModel](model_doc/gptj.html#transformers.GPTJModel) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary.

  Indices can be obtained using `transformers.GPTJTokenizer`. See
  [transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
  details.

  [What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **position_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Indices of positions of each input sequence tokens in the position embeddings. Selected in the range `[0, config.n_positions - 1]`.

  [What are position IDs?](../glossary.html#position-ids)
- **head_mask** (`torch.FloatTensor` of shape `(num_attention_heads,)` or `(n_layer, num_attention_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, n_ctx)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert _input_ids_ indices into associated vectors
  than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.

> Returns

A [BaseModelOutputWithPast](main_classes/output.html#transformers.modeling_outputs.BaseModelOutputWithPast) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) and inputs.

- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) -- Sequence of hidden-states at the output of the last layer of the model.

  If `past_key_values` is used only the last hidden-state of the sequences of shape `(batch_size, 1, hidden_size)` is output.
- **past_key_values** (`tuple(tuple(torch.FloatTensor))`, _optional_, returned when `use_cache=True` is passed or when `config.use_cache=True`) -- Tuple of `tuple(torch.FloatTensor)` of length `config.n_layers`, with each tuple having 2 tensors
  of shape `(batch_size, num_heads, sequence_length, embed_size_per_head)`) and optionally if
  `config.is_encoder_decoder=True` 2 additional tensors of shape `(batch_size, num_heads, encoder_sequence_length, embed_size_per_head)`.

  Contains pre-computed hidden-states (key and values in the self-attention blocks and optionally if
  `config.is_encoder_decoder=True` in the cross-attention blocks) that can be used (see
  `past_key_values` input) to speed up sequential decoding.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.

> Return type

[BaseModelOutputWithPast](main_classes/output.html#transformers.modeling_outputs.BaseModelOutputWithPast) or `tuple(torch.FloatTensor)`

> Example:

```python
>>> from transformers import GPT2Tokenizer, GPTJModel
>>> import torch

>>> tokenizer = GPT2Tokenizer.from_pretrained('EleutherAI/gpt-j-6B')
>>> model = GPTJModel.from_pretrained('EleutherAI/gpt-j-6B')

>>> inputs = tokenizer("Hello, my dog is cute", return_tensors="pt")
>>> outputs = model(**inputs)

>>> last_hidden_states = outputs.last_hidden_state
```


## GPTJForCausalLM

<a id='transformers.GPTJForCausalLM'></a>
> **class transformers.GPTJForCausalLM**(config)


The GPT-J Model transformer with a language modeling head on top (linear layer with weights tied to the input
embeddings).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.

> Parameters

- **config** ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.GPTJForCausalLM.forward'></a>
> **forward**(self, input_ids = None, past_key_values = None, attention_mask = None, token_type_ids = None, position_ids = None, head_mask = None, inputs_embeds = None, labels = None, use_cache = None, output_attentions = None, output_hidden_states = None, return_dict = None)

The [GPTJForCausalLM](model_doc/gptj.html#transformers.GPTJForCausalLM) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary.

  Indices can be obtained using `transformers.GPTJTokenizer`. See
  [transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
  details.

  [What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **position_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Indices of positions of each input sequence tokens in the position embeddings. Selected in the range `[0, config.n_positions - 1]`.

  [What are position IDs?](../glossary.html#position-ids)
- **head_mask** (`torch.FloatTensor` of shape `(num_attention_heads,)` or `(n_layer, num_attention_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, n_ctx)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert _input_ids_ indices into associated vectors
  than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Labels for language modeling. Note that the labels **are shifted** inside the model, i.e. you can set
  `labels = input_ids` Indices are selected in `[-100, 0, ..., config.vocab_size]` All labels set to
  `-100` are ignored (masked), the loss is only computed for labels in `[0, ..., config.vocab_size]`

> Returns

A [CausalLMOutputWithPast](main_classes/output.html#transformers.modeling_outputs.CausalLMOutputWithPast) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Language modeling loss (for next-token prediction).
- **logits** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.vocab_size)`) -- Prediction scores of the language modeling head (scores for each vocabulary token before SoftMax).
- **past_key_values** (`tuple(tuple(torch.FloatTensor))`, _optional_, returned when `use_cache=True` is passed or when `config.use_cache=True`) -- Tuple of `tuple(torch.FloatTensor)` of length `config.n_layers`, with each tuple having 2 tensors
  of shape `(batch_size, num_heads, sequence_length, embed_size_per_head)`)

  Contains pre-computed hidden-states (key and values in the self-attention blocks) that can be used (see
  `past_key_values` input) to speed up sequential decoding.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.

> Return type

[CausalLMOutputWithPast](main_classes/output.html#transformers.modeling_outputs.CausalLMOutputWithPast) or `tuple(torch.FloatTensor)`

> Example:

```python
>>> import torch
>>> from transformers import GPT2Tokenizer, GPTJForCausalLM

>>> tokenizer = GPT2Tokenizer.from_pretrained('EleutherAI/gpt-j-6B')
>>> model = GPTJForCausalLM.from_pretrained('EleutherAI/gpt-j-6B')

>>> inputs = tokenizer("Hello, my dog is cute", return_tensors="pt")
>>> outputs = model(**inputs, labels=inputs["input_ids"])
>>> loss = outputs.loss
>>> logits = outputs.logits
```


## GPTJForSequenceClassification

<a id='transformers.GPTJForSequenceClassification'></a>
> **class transformers.GPTJForSequenceClassification**(config)


The GPT-J Model transformer with a sequence classification head on top (linear layer).

[GPTJForSequenceClassification](model_doc/gptj.html#transformers.GPTJForSequenceClassification) uses the last token in order to do the classification, as
other causal models (e.g. GPT, GPT-2, GPT-Neo) do.

Since it does classification on the last token, it requires to know the position of the last token. If a
`pad_token_id` is defined in the configuration, it finds the last token that is not a padding token in each
row. If no `pad_token_id` is defined, it simply takes the last value in each row of the batch. Since it cannot
guess the padding tokens when `inputs_embeds` are passed instead of `input_ids`, it does the same (take
the last value in each row of the batch).

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) sub-class. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.

> Parameters

- **config** ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](main_classes/model.html#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.


<a id='transformers.GPTJForSequenceClassification.forward'></a>
> **forward**(self, input_ids = None, past_key_values = None, attention_mask = None, token_type_ids = None, position_ids = None, head_mask = None, inputs_embeds = None, labels = None, use_cache = None, output_attentions = None, output_hidden_states = None, return_dict = None)

The [GPTJForSequenceClassification](model_doc/gptj.html#transformers.GPTJForSequenceClassification) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

> Parameters

- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary.

  Indices can be obtained using `transformers.GPTJTokenizer`. See
  [transformers.PreTrainedTokenizer.encode()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](internal/tokenization_utils.html#transformers.PreTrainedTokenizerBase.__call__) for
  details.

  [What are input IDs?](../glossary.html#input-ids)
- **attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary.html#attention-mask)
- **token_type_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Segment token indices to indicate first and second portions of the inputs. Indices are selected in `[0, 1]`:

  - 0 corresponds to a _sentence A_ token,
  - 1 corresponds to a _sentence B_ token.

  [What are token type IDs?](../glossary.html#token-type-ids)
- **position_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Indices of positions of each input sequence tokens in the position embeddings. Selected in the range `[0, config.n_positions - 1]`.

  [What are position IDs?](../glossary.html#position-ids)
- **head_mask** (`torch.FloatTensor` of shape `(num_attention_heads,)` or `(n_layer, num_attention_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **inputs_embeds** (`torch.FloatTensor` of shape `(batch_size, sequence_length, n_ctx)`, _optional_) --
  Optionally, instead of passing `input_ids` you can choose to directly pass an embedded representation.
  This is useful if you want more control over how to convert _input_ids_ indices into associated vectors
  than the model's internal embedding lookup matrix.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](main_classes/output.html#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size,)`, _optional_) --
  Labels for computing the sequence classification/regression loss. Indices should be in `[0, ..., config.num_labels - 1]`. If `config.num_labels == 1` a regression loss is computed (Mean-Square loss),
  If `config.num_labels > 1` a classification loss is computed (Cross-Entropy).

> Returns

A `SequenceClassifierOutputWithPast` or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([GPTJConfig](model_doc/gptj.html#transformers.GPTJConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Classification (or regression if config.num_labels==1) loss.
- **logits** (`torch.FloatTensor` of shape `(batch_size, config.num_labels)`) -- Classification (or regression if config.num_labels==1) scores (before SoftMax).
- **past_key_values** (`tuple(tuple(torch.FloatTensor))`, _optional_, returned when `use_cache=True` is passed or when `config.use_cache=True`) -- Tuple of `tuple(torch.FloatTensor)` of length `config.n_layers`, with each tuple having 2 tensors
  of shape `(batch_size, num_heads, sequence_length, embed_size_per_head)`)

  Contains pre-computed hidden-states (key and values in the self-attention blocks) that can be used (see
  `past_key_values` input) to speed up sequential decoding.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.

> Return type

`SequenceClassifierOutputWithPast` or `tuple(torch.FloatTensor)`

> Example:

```python
>>> from transformers import GPT2Tokenizer, GPTJForSequenceClassification
>>> import torch

>>> tokenizer = GPT2Tokenizer.from_pretrained('EleutherAI/gpt-j-6B')
>>> model = GPTJForSequenceClassification.from_pretrained('EleutherAI/gpt-j-6B')

>>> inputs = tokenizer("Hello, my dog is cute", return_tensors="pt")
>>> labels = torch.tensor([1]).unsqueeze(0)  # Batch size 1
>>> outputs = model(**inputs, labels=labels)
>>> loss = outputs.loss
>>> logits = outputs.logits
```

